# QmlStudy

./: .gitignore  CMakeLists.txt  readme.md
Example/: CMakeLists.txt
Example/assets/qml/: main.qml
Example/src/: main.cpp
QmlWatcher/src/: main.cpp
XQuick/: CMakeLists.txt
XQuick/assets/: assets.qrc
XQuick/assets/qml/Button/: XButton.qml
XQuick/assets/qml/Item/: XDragItem.qml  XResizeItem.qml
XQuick/assets/qml/MouseArea/: XMoveArea.qml
XQuick/src/: XQuickPlugin.cpp  XQuickPlugin.h
